--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --watchAll",
     "dev-test": "nodemon dev-test",
+    "dev-bc-test": "nodemon dev-bc-test",
     "start": "node ./app",
     "dev": "nodemon ./app"
   },
@@ -19,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "crypto-js": "^3.1.9-1",
+    "elliptic": "^6.4.0",
     "express": "^4.16.3"
   }
 }
